window-props: increase window title length in debug messages

https://bugzilla.gnome.org/show_bug.cgi?id=746898